src/scripts/editor.css
#tf-nav-new-post {
  display: inline-flex;
  align-items: center;
  padding: 0.25rem 0.9rem;
}

#tf-editor-dialogue {
  z-index: 10001;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: color-mix(in srgb, var(--bg), transparent);
  display: flex;
  justify-content: center;
  align-items: center;
}

.tf-editor-wrapper {
  position: relative;
}

.tf-editor-wrapper,
.tf-editor-wrapper iframe {
  width: 80vw;
  height: 90vh;
  border: none;
  border-radius: .5rem;
}

.tf-editor-close {
  position: absolute;
  top: -1rem;
  right: -1rem;
  height: 2rem;
  width: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: var(--text);
  background-color: var(--error);
  stroke-width: 2;
  border-radius: 50%;
  border: 2px solid var(--border);
}

@media (max-width: 1024px) {

  .tf-editor-wrapper,
  .tf-editor-wrapper iframe {
    width: 90vw;
    height: 94vh;
  }
}

.tailfeather-editor.btn-primary-sm {
  display: inline-flex;
  align-items: center;
  gap: .5rem;
  justify-self: flex-start;
  margin-right: .5rem;
}

